--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@commitlint/config-conventional": "^19.8.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "yaml-lint": "^1.7.0"
   },
   "scripts": {
     "prepare": "husky install"
