--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -1,29 +1,39 @@
 name: Changelog
 
 on:
-  workflow_dispatch:
   workflow_call:
-    outputs:
-      changelog:
-        description: "Generated changelog"
-        value: ${{ jobs.release-please.outputs.changelog }}
-
-permissions:
-  contents: write
-  pull-requests: write
+    secrets:
+      GITHUB_TOKEN:
+        required: true
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
     outputs:
       changelog: ${{ steps.release.outputs.changelog }}
-
     steps:
-      - uses: googleapis/release-please-action@v4
+      - name: Run release-please
         id: release
+        uses: googleapis/release-please-action@v4
         with:
-          GITHUB_TOKEN: ${{ github.token }}
           release-type: simple
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Add changelog comment to PR
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const changelog = process.env.CHANGELOG;
+            const pr = context.payload.pull_request.number;
+            if (changelog && pr) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: pr,
+                body: `### 📜 Changelog Preview\n\n${changelog}`
+              });
+            }
+        env:
+          CHANGELOG: ${{ steps.release.outputs.changelog }}
