--- a/.github/workflows/snyk-security.yaml
+++ b/.github/workflows/snyk-security.yaml
@@ -65,16 +65,25 @@ jobs:
         run: snyk iac test --sarif-file-output=./sarif/snyk-iac.sarif || true
 
         # Build the docker image for testing
-      - name: Build a Docker image
-        run: docker build -t lf-admin:latest .
+            # Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-        # Runs Snyk Container (Container and SCA) analysis and uploads result to Snyk.
+      # Pull image that was already built & pushed in image-build job
+      - name: Pull Docker image
+        run: docker pull ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }}
+
+      # Runs Snyk Container (Container and SCA) analysis and uploads result to Snyk.
       - name: Snyk Container monitor
-        run: snyk container monitor lf-admin:latest --file=Dockerfile
+        run: snyk container monitor ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile
 
       # Run Snyk Container test to generate SARIF for GitHub Code Scanning
       - name: Snyk Container test (SARIF)
-        run: snyk container test lf-admin:latest --file=Dockerfile --exclude-app-vulns --sarif-file-output=./sarif/snyk-container.sarif || true
+        run: snyk container test ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile --exclude-app-vulns --sarif-file-output=./sarif/snyk-container.sarif || true
 
         # Push the Snyk Code results into GitHub Code Scanning tab
       - name: Upload Snyk Code SARIF
