ci: report script

--- a/.github/workflows/pr_stats_report.yaml
+++ b/.github/workflows/pr_stats_report.yaml
@@ -1,69 +1,28 @@
-name: PR Review Report
+name: Weekly PR Report
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 0 1 * *"
-  pull_request:
-    branches:
-      - feature/999/pr-notifications
+    - cron: "0 12 * * 5" 
+  workflow_dispatch:
+
 jobs:
   pr-report:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install GitHub CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install gh jq -y
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-      - name: Collect PR and review stats
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          repos=("Liatoshynsky-Foundation/lf-client" "Liatoshynsky-Foundation/lf-admin")
+      - name: Install dependencies
+        run: pip install requests
 
-          echo -e "Repository  User      Created PRs  Reviewed PRs  Approved  Changes  Commented  Dismissed" > table.txt
-
-          for repo in "${repos[@]}"; do
-            echo "Collecting from $repo..."
-            gh api repos/$repo/pulls?state=all --paginate > pulls.json
-
-            USERS=$(jq -r '.[].user.login' pulls.json | sort | uniq)
-            for user in $USERS; do
-              CREATED=$(jq --arg u "$user" '[.[] | select(.user.login==$u)] | length' pulls.json)
-
-              REVIEWS=$(jq -r --arg repo "$repo" '.[].number as $num | "repos/\($repo)/pulls/\($num)/reviews"' pulls.json)
-
-              APPROVED=0
-              CHANGES=0
-              COMMENTED=0
-              DISMISSED=0
-              REVIEWED_PR=()
-              for r in $REVIEWS; do
-                DATA=$(gh api $r)
-                COUNT=$(echo "$DATA" | jq --arg u "$user" '[.[] | select(.user.login==$u)] | length')
-                if [ $COUNT -gt 0 ]; then
-                  REVIEWED_PR+=($(echo "$DATA" | jq --arg u "$user" '[.[] | select(.user.login==$u) | .state]' | jq -r '.[]'))
-                  APPROVED=$((APPROVED + $(echo "$DATA" | jq --arg u "$user" '[.[] | select(.user.login==$u and .state=="APPROVED")] | length')))
-                  CHANGES=$((CHANGES + $(echo "$DATA" | jq --arg u "$user" '[.[] | select(.user.login==$u and .state=="CHANGES_REQUESTED")] | length')))
-                  COMMENTED=$((COMMENTED + $(echo "$DATA" | jq --arg u "$user" '[.[] | select(.user.login==$u and .state=="COMMENTED")] | length')))
-                  DISMISSED=$((DISMISSED + $(echo "$DATA" | jq --arg u "$user" '[.[] | select(.user.login==$u and .state=="DISMISSED")] | length')))
-                fi
-              done
-              REVIEWED_COUNT=${#REVIEWED_PR[@]}
-              echo -e "$repo  $user      $CREATED      $REVIEWED_COUNT      $APPROVED      $CHANGES      $COMMENTED      $DISMISSED" >> table.txt
-            done
-          done
-
-      - name: Send report to Discord
+      - name: Run PR report script
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          CONTENT=$(cat table.txt)
-          curl -H "Content-Type: application/json" \
-               -d "{\"content\":\"📊 PR Review Report\n\`\`\`\n$CONTENT\n\`\`\`\"}" \
-               $DISCORD_WEBHOOK
+          python your_script.py
