--- a/.github/workflows/pr_stats_report.yaml
+++ b/.github/workflows/pr_stats_report.yaml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: "0 12 * * 5" 
   workflow_dispatch:
+  pull_request:
+  branch:
+    - feature/999/pr-notification
 
 jobs:
   pr-report:
