--- a/.github/workflows/pr_stats_report.yaml
+++ b/.github/workflows/pr_stats_report.yaml
@@ -21,7 +21,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies
-        run: pip install requests
+        run: pip install requests tabulate
 
       - name: Run PR report script
         env:
