--- a/.github/workflows/snyk-security.yaml
+++ b/.github/workflows/snyk-security.yaml
@@ -16,25 +16,23 @@ on:
 jobs:
   snyk:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read
+      security-events: write
+      actions: read
     runs-on: ubuntu-latest
     env:
-      # Make Snyk token available to all steps
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Snyk CLI to check for security issues
-        # Snyk can be used to break the build when it detects security issues.
-        # In this case we want to upload the SAST issues to GitHub Code Scanning
+
+      - name: Set up Snyk CLI
         uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
 
-        # For Snyk Open Source you must first set up the development environment for your application's dependencies
-        # For example for Node
-      - uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: ${{ inputs.node-version }}
 
       - name: Install dependencies
         run: npm ci
@@ -42,30 +40,21 @@ jobs:
       - name: Prepare SARIF directory
         run: mkdir -p sarif
 
-        # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
-        # Use || true to not fail the pipeline
       - name: Snyk Code test (SARIF)
         run: snyk code test --sarif-file-output=./sarif/snyk-code.sarif || true
 
-        # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
-      - name: Snyk Open Source monitor (lockfile, tolerate mismatch)
+      - name: Snyk Open Source test (SARIF)
+        run: snyk test --all-projects --sarif-file-output=./sarif/snyk-oss.sarif --strict-out-of-sync=false || true
+      
+      - name: Snyk Open Source monitor
         run: snyk monitor --file=package-lock.json --package-manager=npm --strict-out-of-sync=false
 
-      # Run Snyk Open Source test and produce SARIF for GitHub Code Scanning
-      - name: Snyk Open Source test (SARIF, tolerate mismatch)
-        run: snyk test --all-projects --sarif-file-output=./sarif/snyk-oss.sarif --strict-out-of-sync=false || true
-
-        # Runs Snyk Infrastructure as Code (IaC) analysis and uploads result to Snyk.
-        # Use || true to not fail the pipeline.
+      - name: Snyk IaC test (SARIF)
+        run: snyk iac test --sarif-file-output=./sarif/snyk-iac.sarif || true
+      
       - name: Snyk IaC test and report
         run: snyk iac test --report || true
 
-      # Also produce SARIF for IaC to surface in GitHub Security
-      - name: Snyk IaC test (SARIF)
-        run: snyk iac test --sarif-file-output=sarif/snyk-iac.sarif || true
-
-        # Build the docker image for testing
-            # Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -73,43 +62,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Pull image that was already built & pushed in image-build job
       - name: Pull Docker image
         run: docker pull ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }}
 
-      # Runs Snyk Container (Container and SCA) analysis and uploads result to Snyk.
-      - name: Snyk Container monitor
-        run: snyk container monitor ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile
-
-      # Run Snyk Container test to generate SARIF for GitHub Code Scanning
       - name: Snyk Container test (SARIF)
         run: snyk container test ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile --exclude-app-vulns --sarif-file-output=./sarif/snyk-container.sarif || true
 
-        # Push the Snyk Code results into GitHub Code Scanning tab
-      - name: Upload Snyk Code SARIF
-        if: hashFiles('sarif/snyk-code.sarif') != ''
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: sarif/snyk-code.sarif
-          category: snyk-code
+      - name: Snyk Container monitor
+        run: snyk container monitor ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile
 
-      - name: Upload Snyk OSS SARIF
-        if: hashFiles('sarif/snyk-oss.sarif') != ''
-        uses: github/codeql-action/upload-sarif@v3
+      - name: Combine Snyk SARIF files
+        id: combine_sarif
+        uses: snyk/sarif-combine@v1
         with:
-          sarif_file: sarif/snyk-oss.sarif
-          category: snyk-oss
+          sarif_directory: sarif
+          output_file: snyk-all.sarif
 
-      - name: Upload Snyk IaC SARIF
-        if: hashFiles('sarif/snyk-iac.sarif') != ''
+      - name: Upload combined Snyk SARIF to GitHub Code Scanning
+        if: always()
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: sarif/snyk-iac.sarif
-          category: snyk-iac
-
-      - name: Upload Snyk Container SARIF
-        if: hashFiles('sarif/snyk-container.sarif') != ''
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: sarif/snyk-container.sarif
-          category: snyk-container
+          sarif_file: sarif/snyk-all.sarif
+          category: snyk-combined
