--- a/.github/workflows/snyk-security.yaml
+++ b/.github/workflows/snyk-security.yaml
@@ -22,15 +22,15 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      SNYK_FAIL_ON_LEVEL: high 
 
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Snyk CLI
         uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
 
-      - uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node-version }}
 
@@ -39,25 +39,21 @@ jobs:
 
       - name: Prepare SARIF directory
         run: mkdir -p sarif
-      
-      - name: Snyk Code test (SARIF)
-        id: snyk_code
-        run: snyk code test --fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} --sarif-file-output=./sarif/snyk-code.sarif || echo "SNYK_CODE_EXIT_CODE=$?" >> $GITHUB_OUTPUT || true
 
-      - name: Snyk Open Source monitor (lockfile, tolerate mismatch)
+      - name: Snyk Code test (SARIF)
+        run: snyk code test --sarif-file-output=./sarif/snyk-code.sarif --fail-on=high
+
+      - name: Snyk Open Source test (SARIF)
+        run: snyk test --all-projects --sarif-file-output=./sarif/snyk-oss.sarif --strict-out-of-sync=false --fail-on=high
+      
+      - name: Snyk Open Source monitor
         run: snyk monitor --file=package-lock.json --package-manager=npm --strict-out-of-sync=false
 
-      - name: Snyk Open Source test (SARIF, tolerate mismatch)
-        id: snyk_oss
-        run: snyk test --all-projects --fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} --sarif-file-output=./sarif/snyk-oss.sarif --strict-out-of-sync=false || echo "SNYK_OSS_EXIT_CODE=$?" >> $GITHUB_OUTPUT || true
-
-      - name: Snyk IaC test and report
-        id: snyk_iac_report
-        run: snyk iac test --report --fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} || echo "SNYK_IAC_REPORT_EXIT_CODE=$?" >> $GITHUB_OUTPUT || true
-
       - name: Snyk IaC test (SARIF)
-        id: snyk_iac
-        run: snyk iac test --fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} --sarif-file-output=sarif/snyk-iac.sarif || echo "SNYK_IAC_EXIT_CODE=$?" >> $GITHUB_OUTPUT || true
+        run: snyk iac test --sarif-file-output=./sarif/snyk-iac.sarif --fail-on=high
+      
+      - name: Snyk IaC test and report
+        run: snyk iac test --report --fail-on=high
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -69,66 +65,36 @@ jobs:
       - name: Pull Docker image
         run: docker pull ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }}
 
+      - name: Snyk Container test (SARIF)
+        run: snyk container test ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile --exclude-app-vulns --sarif-file-output=./sarif/snyk-container.sarif --fail-on=high
+
       - name: Snyk Container monitor
         run: snyk container monitor ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile
 
-      - name: Snyk Container test (SARIF)
-        id: snyk_container
-        run: snyk container test ghcr.io/liatoshynsky-foundation/${{ inputs.docker-image-name }}:${{ github.sha }} --file=Dockerfile --exclude-app-vulns --fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} --sarif-file-output=./sarif/snyk-container.sarif || echo "SNYK_CONTAINER_EXIT_CODE=$?" >> $GITHUB_OUTPUT || true
-
       - name: Upload Snyk Code SARIF
-        if: always() && hashFiles('sarif/snyk-code.sarif') != ''
+        if: hashFiles('sarif/snyk-code.sarif') != ''
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: sarif/snyk-code.sarif
           category: snyk-code
 
       - name: Upload Snyk OSS SARIF
-        if: always() && hashFiles('sarif/snyk-oss.sarif') != ''
+        if: hashFiles('sarif/snyk-oss.sarif') != ''
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: sarif/snyk-oss.sarif
           category: snyk-oss
 
       - name: Upload Snyk IaC SARIF
-        if: always() && hashFiles('sarif/snyk-iac.sarif') != ''
+        if: hashFiles('sarif/snyk-iac.sarif') != ''
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: sarif/snyk-iac.sarif
           category: snyk-iac
 
       - name: Upload Snyk Container SARIF
-        if: always() && hashFiles('sarif/snyk-container.sarif') != ''
+        if: hashFiles('sarif/snyk-container.sarif') != ''
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: sarif/snyk-container.sarif
           category: snyk-container
-
-      - name: Final Snyk Security Gate Check
-        run: |
-          set -e
-          
-          if [ "${{ steps.snyk_code.outputs.SNYK_CODE_EXIT_CODE }}" = "1" ]; then
-            echo "::error::Snyk Code test failed due to issues matching fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} policy."
-            exit 1
-          fi
-
-          if [ "${{ steps.snyk_oss.outputs.SNYK_OSS_EXIT_CODE }}" = "1" ]; then
-            echo "::error::Snyk Open Source test failed due to issues matching fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} policy."
-            exit 1
-          fi
-
-          if [ "${{ steps.snyk_iac_report.outputs.SNYK_IAC_REPORT_EXIT_CODE }}" = "1" ]; then
-            echo "::error::Snyk IaC test (report) failed due to issues matching fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} policy."
-            exit 1
-          fi
-
-          if [ "${{ steps.snyk_iac.outputs.SNYK_IAC_EXIT_CODE }}" = "1" ]; then
-            echo "::error::Snyk IaC test (SARIF) failed due to issues matching fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} policy."
-            exit 1
-          fi
-
-          if [ "${{ steps.snyk_container.outputs.SNYK_CONTAINER_EXIT_CODE }}" = "1" ]; then
-            echo "::error::Snyk Container test failed due to issues matching fail-on=${{ env.SNYK_FAIL_ON_LEVEL }} policy."
-            exit 1
-          fi
