refactor: update Caddyfile to use reverse proxy and modify docker-compose for new service structure

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,5 @@
 liatoshynsky.com {
-  root * /usr/share/caddy
-  file_server
-  try_files {path} /temp.html
+  reverse_proxy lf-placeholder:80
 }
 
 monitoring.liatoshynsky.com {
