feat: add environment variable management with encryption and decryption scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # Environment variables
-.env
-.env.client
-.env.admin
-!.env.example
-!.env.client.example
-!.env.admin.example
+# .env files are committed but MUST contain only encrypted values (AES::@...@)
+# Pre-commit hook will check this automatically
+!.env
+!.env.client
+!.env.admin
 
-# Tailscale
-tailscale/
+# Caddy
+caddy/certs/**
