--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,14 +10,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy files
-        uses: appleboy/scp-action@master
+      - name: Clone repository on server
+        uses: appleboy/ssh-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          source: "."
-          target: ${{ secrets.DEPLOY_PATH }}
+          envs: GITHUB_TOKEN
+          script: |
+            cd ${{ secrets.DEPLOY_PATH }}
+            rm -rf * .[^.]* 2>/dev/null || true
+            git clone --depth 1 --branch main https://${GITHUB_TOKEN}@github.com/${{ github.repository }}.git .
 
       - name: Setup and decrypt
         uses: appleboy/ssh-action@master
