Caddy file with tls

--- a/Caddyfile
+++ b/Caddyfile
@@ -3,16 +3,14 @@
 }
 
 liatoshynsky.com {
-  tls {
-    dns cloudflare {env.CLOUDFLARE_API_TOKEN}
-  }
+  tls /etc/certs/origin.pem /etc/certs/origin.key
+
   reverse_proxy lf-placeholder:80
 }
 
 client.liatoshynsky.com {
-  tls {
-    dns cloudflare {env.CLOUDFLARE_API_TOKEN}
-  }
+  tls /etc/certs/origin.pem /etc/certs/origin.key
+
   basic_auth {
   	admin {env.CADDY_BASIC_AUTH_HASH}
   }
@@ -21,9 +19,8 @@ client.liatoshynsky.com {
 }
 
 admin.liatoshynsky.com {
-  tls {
-    dns cloudflare {env.CLOUDFLARE_API_TOKEN}
-  }
+  tls /etc/certs/origin.pem /etc/certs/origin.key
+
   basic_auth {
   	admin {env.CADDY_BASIC_AUTH_HASH}
   }
@@ -32,8 +29,7 @@ admin.liatoshynsky.com {
 }
 
 status.liatoshynsky.com {
-  tls {
-    dns cloudflare {env.CLOUDFLARE_API_TOKEN}
-  }
+  tls /etc/certs/origin.pem /etc/certs/origin.key
+
   reverse_proxy uptime-kuma:4173
 }
