--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,9 @@ name: Deploy
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - feat/47/caddy-traefik
   # push:
   #   branches:
   #     - main
@@ -17,15 +20,21 @@ jobs:
         uses: appleboy/ssh-action@master
         env:
           ENV_PASSWORD: ${{ secrets.ENV_PASSWORD }}
+          GITHUB_REF_NAME: ${{ github.ref_name }}
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          envs: ENV_PASSWORD
+          envs: ENV_PASSWORD,GITHUB_REF_NAME
           script: |
             set -e
             cd ${{ secrets.DEPLOY_PATH }}
-            git pull
+            BRANCH="${GITHUB_REF_NAME:-main}"
+            git fetch origin
+            git stash || true
+            git checkout -B "$BRANCH" "origin/$BRANCH" 2>/dev/null || git checkout -b "$BRANCH" "origin/$BRANCH"
+            git reset --hard "origin/$BRANCH"
+            git clean -fd || true
             make decrypt
             make pull
             make down
