--- a/traefik.yaml
+++ b/traefik.yaml
@@ -21,7 +21,7 @@ certificatesResolvers:
       storage: /data/acme.json
       dnsChallenge:
         provider: cloudflare
-        delayBeforeCheck: 30
+        delayBeforeCheck: "30s"
         resolvers:
           - "1.1.1.1:53"
           - "1.0.0.1:53"
