--- a/compose.yaml
+++ b/compose.yaml
@@ -19,7 +19,7 @@ services:
       - caddy_config:/config
 
   lf-placeholder:
-    image: ghcr.io/liatoshynsky-foundation/lf-placeholder:latest
+    image: ghcr.io/liatoshynsky-foundation/lf-placeholder:${PLACEHOLDER_TAG:-latest}
     pull_policy: always
     restart: unless-stopped
     container_name: lf-placeholder
@@ -34,7 +34,7 @@ services:
       start_period: 10s
 
   client:
-    image: ghcr.io/liatoshynsky-foundation/lf-client:latest
+    image: ghcr.io/liatoshynsky-foundation/lf-client:${CLIENT_TAG:-stage}
     pull_policy: always
     container_name: lf-client
     env_file: .env.client
@@ -52,7 +52,7 @@ services:
       start_period: 40s
 
   admin:
-    image: ghcr.io/liatoshynsky-foundation/lf-admin:latest
+    image: ghcr.io/liatoshynsky-foundation/lf-admin:${ADMIN_TAG:-stage}
     pull_policy: always
     container_name: lf-admin
     env_file: .env.admin
