--- a/.github/workflows/reusable-cd.yml
+++ b/.github/workflows/reusable-cd.yml
@@ -104,6 +104,7 @@ jobs:
   build:
     name: Build container image
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       contents: read
       packages: write
@@ -133,6 +134,15 @@ jobs:
       - name: Set lowercase repository owner
         run: echo "REPO_OWNER_LOWER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
+      - name: Set image tag based on branch
+        id: set-tag
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/develop" ]]; then
+            echo "tag=stage" >> $GITHUB_OUTPUT
+          else
+            echo "tag=latest" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build and push container image
         uses: docker/build-push-action@v6
         with:
@@ -141,7 +151,7 @@ jobs:
           tags: |
             ${{ inputs.azure-registry != '' && format('{0}/{1}/{2}:{3}', inputs.azure-registry, secrets[inputs.azure-username-secret], inputs.azure-image-name, github.sha) || '' }}
             ghcr.io/${{ env.REPO_OWNER_LOWER }}/${{ inputs.project-name }}:${{ github.sha }}
-            ghcr.io/${{ env.REPO_OWNER_LOWER }}/${{ inputs.project-name }}:latest
+            ghcr.io/${{ env.REPO_OWNER_LOWER }}/${{ inputs.project-name }}:${{ steps.set-tag.outputs.tag }}
           file: ./Dockerfile
           cache-from: type=gha
           cache-to: type=gha,mode=max
