--- a/.github/workflows/reusable-cd.yml
+++ b/.github/workflows/reusable-cd.yml
@@ -96,6 +96,17 @@ on:
         description: "VPS deployment URL for environment output"
         required: false
         type: string
+    secrets:
+      azure-username:
+        required: false
+      azure-password:
+        required: false
+      azure-publish-profile:
+        required: false
+      azure-qa-publish-profile:
+        required: false
+      azure-qa-username:
+        required: false
 
 jobs:
   build:
@@ -114,12 +125,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Azure Container Registry
-        if: inputs.azure-registry != '' && inputs.azure-username-secret != '' && inputs.azure-password-secret != ''
+        if: inputs.azure-registry != '' && secrets.azure-username != '' && secrets.azure-password != ''
         uses: docker/login-action@v3
         with:
           registry: ${{ inputs.azure-registry }}
-          username: ${{ secrets[inputs.azure-username-secret] }}
-          password: ${{ secrets[inputs.azure-password-secret] }}
+          username: ${{ secrets.azure-username }}
+          password: ${{ secrets.azure-password }}
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -146,7 +157,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ inputs.azure-registry != '' && format('{0}/{1}/{2}:{3}', inputs.azure-registry, secrets[inputs.azure-username-secret], inputs.azure-image-name, github.sha) || '' }}
+            ${{ inputs.azure-registry != '' && secrets.azure-username != '' && format('{0}/{1}/{2}:{3}', inputs.azure-registry, secrets.azure-username, inputs.azure-image-name, github.sha) || '' }}
             ghcr.io/${{ env.REPO_OWNER_LOWER }}/${{ inputs.project-name }}:${{ github.sha }}
             ghcr.io/${{ env.REPO_OWNER_LOWER }}/${{ inputs.project-name }}:${{ steps.set-tag.outputs.tag }}
           file: ./Dockerfile
@@ -157,7 +168,7 @@ jobs:
     name: Deploy to Azure Web App
     runs-on: ubuntu-latest
     needs: build
-    if: inputs.deploy-azure && inputs.azure-registry != '' && inputs.azure-app-name != '' && inputs.azure-publish-profile-secret != ''
+    if: inputs.deploy-azure && inputs.azure-registry != '' && inputs.azure-app-name != '' && secrets.azure-publish-profile != ''
     environment:
       name: "production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -169,14 +180,14 @@ jobs:
         with:
           app-name: ${{ inputs.azure-app-name }}
           slot-name: ${{ inputs.azure-slot-name }}
-          publish-profile: ${{ secrets[inputs.azure-publish-profile-secret] }}
-          images: ${{ inputs.azure-registry }}/${{ secrets[inputs.azure-username-secret] }}/${{ inputs.azure-image-name }}:${{ github.sha }}
+          publish-profile: ${{ secrets.azure-publish-profile }}
+          images: ${{ inputs.azure-registry }}/${{ secrets.azure-username }}/${{ inputs.azure-image-name }}:${{ github.sha }}
 
   deploy-azure-qa:
     name: Deploy to Azure Web App (QA)
     runs-on: ubuntu-latest
     needs: build
-    if: inputs.deploy-azure-qa && inputs.azure-registry != '' && inputs.azure-qa-app-name != '' && inputs.azure-qa-publish-profile-secret != ''
+    if: inputs.deploy-azure-qa && inputs.azure-registry != '' && inputs.azure-qa-app-name != '' && secrets.azure-qa-publish-profile != ''
     environment:
       name: "qa"
       url: ${{ steps.deploy-to-qa-webapp.outputs.webapp-url }}
@@ -188,8 +199,8 @@ jobs:
         with:
           app-name: ${{ inputs.azure-qa-app-name }}
           slot-name: "production"
-          publish-profile: ${{ secrets[inputs.azure-qa-publish-profile-secret] }}
-          images: ${{ inputs.azure-registry }}/${{ secrets[inputs.azure-qa-username-secret] }}/${{ inputs.azure-image-name }}:${{ github.sha }}
+          publish-profile: ${{ secrets.azure-qa-publish-profile }}
+          images: ${{ inputs.azure-registry }}/${{ secrets.azure-qa-username }}/${{ inputs.azure-image-name }}:${{ github.sha }}
 
   deploy-vps:
     name: Deploy to VPS
